# mocha

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  IMPROVEMENTS.md  PRESENTATION.md  README.md  agents.py  hallucheck.py  kpi.py  kpi_calc.py  main.py  oauth_creds.py  pyproject.toml  requirements.txt
.github/workflows/: smoke.yml  test.yml
_runtime/: bench.py  chat1.sse  chat2.sse  launch.py  prewarm_one.py  routing_eval.py  routing_eval_results.json  smoke_test.py
agents/: critic.py  domain_experts.py  query_writer.py
data_sources/: __init__.py  _archive_root.py  archive.py  bq.py
migrations/: 001_init.sql  002_token_usage.sql
plugins/eda/: CLAUDE.md
plugins/eda/.claude-plugin/: plugin.json
plugins/eda/skills/eda-casestudy/: SKILL.md
plugins/eda/templates/: 01_light_memo.md  02_full_eda.md  03_ab_test.md  04_analysis_report.md  README.md
prompts/: __init__.py  fast_panda.tmpl  gateway.tmpl  insight.tmpl
scripts/: DUMP_MARS_KPI.md  download_ml1m.py  dump_mars_kpi_archive.py  expand_title_map.py
semantic/: __init__.py  glossary.py  registry.py  resolve.py
static/: app.js  dashboard.js  i18n.js  index.html  notion.css  style.css
templates/: abtest_template.md  eda_template.md
tests/: test_ap_cache.py  test_archive_fetchers.py  test_archive_root.py  test_critic.py  test_galaxy_summary.py  test_hallucheck.py  test_kpi_calc.py  test_kpi_metrics.py  test_mars_adultplus.py  test_query_writer_archive.py  test_semantic.py  test_summary_fast.py  test_system_prompt_archive.py  test_top_users.py  test_window_validation.py
(+72 files in other folders)
